[gd_scene load_steps=11 format=3 uid="uid://b72umgok53ami"]

[ext_resource type="Script" uid="uid://e7y7grjktmx6" path="res://Prefabs/Bullet/beam.gd" id="1_4kjgk"]
[ext_resource type="Texture2D" uid="uid://b6cisrtrq4puj" path="res://Resources/hunting_target_active.png" id="2_vjft6"]
[ext_resource type="Texture2D" uid="uid://chvchkx3c81ad" path="res://Resources/hunting_target.png" id="3_6h3n3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t87ny"]
radius = 91.022

[sub_resource type="Animation" id="Animation_nole0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4qlie"]
resource_name = "fade_out"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9.9),
"transitions": PackedFloat32Array(0.732042, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m4wee"]
_data = {
&"RESET": SubResource("Animation_nole0"),
&"fade_out": SubResource("Animation_4qlie")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_65pou"]
atlas = ExtResource("2_vjft6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlsuc"]
atlas = ExtResource("3_6h3n3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_38b6a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_65pou")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlsuc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Beam" type="Area2D" groups=["bullet"]]
position = Vector2(512, 366)
script = ExtResource("1_4kjgk")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t87ny")
disabled = true

[node name="GenericTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_m4wee")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(13, 13)
sprite_frames = SubResource("SpriteFrames_38b6a")

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GenericTimer" to="." method="_on_deletion_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
